вместо list возвращаем коллекцию, также проверяем на пустоту, чтобы лишний раз не запускать